# agent-spec

./: .aider.conf.yml  .cursorrules  .gitignore  AGENTS.md  Cargo.toml  README.md
.claude/skills/agent-spec-authoring/: SKILL.md
.claude/skills/agent-spec-authoring/agents/: openai.yaml
.claude/skills/agent-spec-authoring/references/: patterns.md
.claude/skills/agent-spec-tool-first/: SKILL.md
.claude/skills/agent-spec-tool-first/agents/: openai.yaml
.claude/skills/agent-spec-tool-first/references/: commands.md
crates/spec-cli/: Cargo.toml
crates/spec-cli/src/: main.rs
crates/spec-core/: Cargo.toml
crates/spec-core/src/: ast.rs  error.rs  lib.rs  lint.rs  verify.rs
crates/spec-gateway/: Cargo.toml
crates/spec-gateway/src/: brief.rs  lib.rs  lifecycle.rs
crates/spec-lint/: Cargo.toml
crates/spec-lint/src/: lib.rs  linters.rs  pipeline.rs
crates/spec-parser/: Cargo.toml
crates/spec-parser/src/: keywords.rs  lib.rs  meta.rs  parser.rs  resolver.rs
crates/spec-report/: Cargo.toml
crates/spec-report/src/: lib.rs
crates/spec-verify/: Cargo.toml
crates/spec-verify/src/: ai_verifier.rs  boundaries.rs  lib.rs  structural.rs  test_verifier.rs
examples/: README.md  no-unwrap.spec  refactor-payment-service.spec  refund.spec  user-registration-contract.spec
specs/: project.spec  task-add-ai-verifier-skeleton.spec  task-derive-change-set-from-staged-git-index.spec  task-enforce-boundaries-with-explicit-change-set.spec  task-fail-on-skipped.spec  task-fix-contract-fidelity.spec  task-fix-inheritance.spec  task-formalize-test-binding.spec  task-host-injected-ai-backend.spec  task-make-contract-default.spec  task-phase1-contract-review-loop.spec  task-phase4-ai-verification-expansion.spec  task-pluggable-ai-backend-interface.spec  task-require-explicit-test-selectors.spec  task-ship-claude-code-tool-first-skills.spec  task-stage-roadmap-specs.spec  task-structure-test-selectors.spec  task-support-change-scope-in-verify-and-lifecycle.spec  task-support-git-worktree-change-scope.spec  task-support-step-tables.spec
specs/roadmap/: README.md  task-phase0-contract-fidelity.spec  task-phase2-run-history-and-vcs-context.spec  task-phase3-spec-governance.spec  task-phase5-ecosystem-integrations.spec  task-phase6-advanced-verification.spec
src/: main.rs
src/spec_gateway/: lifecycle.rs
src/spec_lint/: mod.rs  pipeline.rs  property_linter.rs
src/spec_verify/: bombadil_verifier.rs  mod.rs  tdd_guard_verifier.rs
