[package]
name = "agent-spec"
description = "AI-native BDD/Spec verification tool for contract-driven agent coding"
edition = "2024"
version = "0.2.7"
license = "MIT"
repository = "https://github.com/ZhangHanDong/agent-spec"
homepage = "https://github.com/ZhangHanDong/agent-spec"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.49", features = ["full"] }
regex = "1"

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
