[package]
name = "agent-spec"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
spec-core.workspace = true
spec-parser.workspace = true
spec-lint.workspace = true
spec-verify.workspace = true
spec-report.workspace = true
spec-gateway.workspace = true
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
